Retouche visuel formulaires

--- a/pages/connexion.html
+++ b/pages/connexion.html
@@ -19,15 +19,16 @@
           <img class="logo-header" src="../asset/Logo.png" alt="logo">
         </a>
       </header>
-      <div class="container-form">
+
+      <div class="container-connexion">
         <form class="form" action="" method="post" id="loginForm">
-          <div class="mb-3">
+          <div>
             <label for="email" class="form-label">Email</label>
             <input type="email" class="form-control" name="email" autocomplete="off" >
             <small></small>
           </div>
           
-          <div class="mb-3">
+          <div>
             <label for="password" class="form-label">Mot de passe</label>
             <input type="text" class="form-control" name="password"> <!-- Remettre type = password-->
             <small></small>
