détails page animaux et map corrigé

--- a/pages/habitat-animaux.html
+++ b/pages/habitat-animaux.html
@@ -66,24 +66,23 @@
     <img src="../asset/Plan.png" usemap="#zoo-map">
 
     <map name="zoo-map">
-      <area shape="poly" coords="446,337,293,338,98,336,97,159,101,97,438,102" 
-      href="lion.html" alt="plan du zoo" title="Lions">
+      <area shape="circle" coords="249,233,105" 
+      href="lion.html" alt="plan du zoo" title="La savane carnivore">
+      
+      <area shape="circle" coords="727,164,105"
+        href="lion.html" alt="plan du zoo" title="La savane herbivore">
 
-      <area shape="poly"
-        coords="693,306,524,337,447,474,445,613,500,686,574,717,682,693,699,584,698,488,730,437,765,390,748,332"
-        href="lion.html" alt="plan du zoo" title="Oiseaux">
+      <area shape="circle" coords="166,472,108" 
+      href="lion.html" alt="plan du zoo" title="L'Australie">
 
-      <area shape="poly" coords="494,77,499,210,763,226,820,262,957,265,950,83" 
-      href="lion.html" alt="plan du zoo" title="Girafes">
+      <area shape="circle" coords="820,722,110" 
+      href="lion.html" alt="plan du zoo" title="Amérique du Sud">
 
-      <area shape="poly" coords="750,549,958,546,955,897,694,896,698,755" 
-      href="lion.html" alt="plan du zoo" title="Singes">
+      <area shape="circle" coords="579,475,116" 
+      href="kangourou.html" alt="plan du zoo" title="La volière">
 
-      <area shape="poly" coords="88,370,339,366,327,572,90,575" 
-      href="kangourou.html" alt="plan du zoo" title="Kangourous">
-
-      <area shape="poly" coords="84,626,274,625,270,925,71,925" 
-      href="lion.html" alt="plan du zoo" title="Loups">
+      <area shape="circle" coords="191,790,109" 
+      href="lion.html" alt="plan du zoo" title="Europe centrale">
     </map>
   </section>
 
