--- a/pages/accueil.html
+++ b/pages/accueil.html
@@ -99,42 +99,42 @@
       <a href="../pages/habitat-animaux.html">
         <img class="profile" src="../asset/Profil lion.png" alt="Lion">
       </a>
-      <h3>Lions</h3>
+      <h3>Savane Carnivore</h3>
     </div>
 
     <div class="card-profile">
       <a href="../pages/habitat-animaux.html">
         <img class="profile" src="../asset/Profil girafe.png" alt="Girafe">
       </a>
-      <h3>Girafes</h3>
+      <h3>Savane Herbivore</h3>
     </div>
 
     <div class="card-profile">
       <a href="../pages/habitat-animaux.html">
         <img class="profile" src="../asset/Profil kangourou.png" alt="Kangourou">
       </a>
-      <h3>Kangourous</h3>
+      <h3>L'Australie</h3>
     </div>
 
     <div class="card-profile">
       <a href="../pages/habitat-animaux.html">
         <img class="profile" src="../asset/Profil singe.png" alt="Singes">
       </a>
-      <h3>Singes</h3>
+      <h3>Amérique du Sud</h3>
     </div>
 
     <div class="card-profile">
       <a href="../pages/habitat-animaux.html">
         <img class="profile" src="../asset/Profil oiseau.png" alt="Perroquet">
       </a>
-      <h3>Oiseaux</h3>
+      <h3>La volière</h3>
     </div>
 
     <div class="card-profile">
       <a href="../pages/habitat-animaux.html">
         <img class="profile" src="../asset/Profil loup.png" alt="Loup">
       </a>
-      <h3>Loups</h3>
+      <h3>Europe Centrale</h3>
     </div>
   </div>
   <div class="container-color">
