--- a/pages/kangourou.html
+++ b/pages/kangourou.html
@@ -76,6 +76,7 @@
                 <li>Nom: Punch</li>
                 <li>Race: Kangourou antilope</li>
                 <li>Habitat: Australie</li>
+                <li>Avis du Vétérinaire</li>
             </ul>
         </div>
 
@@ -85,6 +86,7 @@
                 <li>Nom: Uppercut</li>
                 <li>Race: Kangouroux gris</li>
                 <li>Habitat: L'Australie</li>
+                <li>Avis du Vétérinaire</li>
             </ul>
         </div>
 
