--- a/pages/lion.html
+++ b/pages/lion.html
@@ -71,6 +71,7 @@
                 <li>Nom: Enzo</li>
                 <li>Race: Lion du Sénégal</li>
                 <li>Habitat: La savane</li>
+                <li>Avis du Vétérinaire</li>
             </ul>
         </div>
 
@@ -80,6 +81,7 @@
                 <li>Nom: Nina</li>
                 <li>Race: Lion du Sénégal</li>
                 <li>Habitat: La savane</li>
+                <li>Avis du Vétérinaire</li>
             </ul>
         </div>
 
