modifications photos animaux + ajout page.html animaux

--- a/pages/accueil.html
+++ b/pages/accueil.html
@@ -96,51 +96,53 @@
     </div>
     <div class="container-profile">
     <div class="card-profile">
-      <a href="../pages/habitat-animaux.html">
+      <a href="../pages/lion.html">
         <img class="profile" src="../asset/Profil lion.png" alt="Lion">
       </a>
-      <h3>Savane Carnivore</h3>
+      <h3>Leonardo</h3>
     </div>
 
     <div class="card-profile">
-      <a href="../pages/habitat-animaux.html">
+      <a href="../pages/girafe.html">
         <img class="profile" src="../asset/Profil girafe.png" alt="Girafe">
       </a>
-      <h3>Savane Herbivore</h3>
+      <h3>Zara</h3>
     </div>
 
     <div class="card-profile">
-      <a href="../pages/habitat-animaux.html">
+      <a href="../pages/kangourou.html">
         <img class="profile" src="../asset/Profil kangourou.png" alt="Kangourou">
       </a>
-      <h3>L'Australie</h3>
+      <h3>Roo</h3>
     </div>
 
     <div class="card-profile">
-      <a href="../pages/habitat-animaux.html">
+      <a href="../pages/singe.html">
         <img class="profile" src="../asset/Profil singe.png" alt="Singes">
       </a>
-      <h3>Amérique du Sud</h3>
+      <h3>Bongo</h3>
     </div>
 
     <div class="card-profile">
-      <a href="../pages/habitat-animaux.html">
+      <a href="../pages/oiseaux.html">
         <img class="profile" src="../asset/Profil oiseau.png" alt="Perroquet">
       </a>
-      <h3>La volière</h3>
+      <h3>Rio</h3>
     </div>
 
     <div class="card-profile">
-      <a href="../pages/habitat-animaux.html">
+      <a href="../pages/loup.html">
         <img class="profile" src="../asset/Profil loup.png" alt="Loup">
       </a>
-      <h3>Europe Centrale</h3>
+      <h3>Fang</h3>
     </div>
   </div>
   <div class="container-color">
     </div>
   </section>
-  <!-- Avis diaporama bootstrap? + lien laisser commentaire canva = créer img témoignage-->
+
+  
+  <!-- Avis-->
   <section class="container-avis">
     <div id="carouselExample" class="carousel slide">
       <div class="carousel-inner">
