--- a/pages/habitat-animaux.html
+++ b/pages/habitat-animaux.html
@@ -70,19 +70,19 @@
       href="lion.html" alt="plan du zoo" title="La savane carnivore">
       
       <area shape="circle" coords="727,164,105"
-        href="lion.html" alt="plan du zoo" title="La savane herbivore">
+        href="girafe.html" alt="plan du zoo" title="La savane herbivore">
 
       <area shape="circle" coords="166,472,108" 
-      href="lion.html" alt="plan du zoo" title="L'Australie">
+      href="kangourou.html" alt="plan du zoo" title="L'Australie">
 
-      <area shape="circle" coords="820,722,110" 
-      href="lion.html" alt="plan du zoo" title="Amérique du Sud">
+      <area shape="circle" coords="815,720,133" 
+      href="singe.html" alt="plan du zoo" title="Amazonie">
 
       <area shape="circle" coords="579,475,116" 
-      href="kangourou.html" alt="plan du zoo" title="La volière">
+      href="oiseaux.html" alt="plan du zoo" title="Tropique">
 
-      <area shape="circle" coords="191,790,109" 
-      href="lion.html" alt="plan du zoo" title="Europe centrale">
+      <area shape="circle" coords="189,784,121" 
+      href="loup.html" alt="plan du zoo" title="Europe centrale">
     </map>
   </section>
 
@@ -96,44 +96,44 @@
   <section class="container-profile">
     <div class="card-profile">
       <a href="lion.html">
-        <img class="profile" src="../asset/Profil lion.png" alt="Lion">
+        <img class="profile" src="../asset/savane-lion.jpg" alt="Lion">
       </a>
-      <h3>Lions</h3>
+      <h4>La Savane aux Lions</h4>
     </div>
 
     <div class="card-profile">
-      <a href="lion.html">
-        <img class="profile" src="../asset/Profil girafe.png" alt="Girafe">
+      <a href="girafe.html">
+        <img class="profile" src="../asset/savane-girafe.jpg" alt="Girafe">
       </a>
-      <h3>Girafes</h3>
+      <h4>La savane des Girafes</h4>
     </div>
 
     <div class="card-profile">
       <a href="kangourou.html">
-        <img class="profile" src="../asset/Profil kangourou.png" alt="Kangourou">
+        <img class="profile" src="../asset/australie-kangourou.jpg" alt="Kangourou">
       </a>
-      <h3>Kangourous</h3>
+      <h4>Désert d'Australie</h4>
     </div>
 
     <div class="card-profile">
-      <a href="lion.html">
-        <img class="profile" src="../asset/Profil singe.png" alt="Singes">
+      <a href="singe.html">
+        <img class="profile" src="../asset/amazonie-singe.jpg" alt="Singes">
       </a>
-      <h3>Singes</h3>
+      <h4>L'amazonie</h4>
     </div>
 
     <div class="card-profile">
-      <a href="lion.html">
-        <img class="profile" src="../asset/Profil oiseau.png" alt="Perroquet">
+      <a href="oiseaux.html">
+        <img class="profile" src="../asset/tropical-perroquet.jpg" alt="Perroquet">
       </a>
-      <h3>Oiseaux</h3>
+      <h4>Les Tropiques</h4>
     </div>
 
     <div class="card-profile">
-      <a href="lion.html">
-        <img class="profile" src="../asset/Profil loup.png" alt="Loup">
+      <a href="loup.html">
+        <img class="profile" src="../asset/forêt-loup.jpg" alt="Loup">
       </a>
-      <h3>Loups</h3>
+      <h4>Forêt hivernale</h4>
     </div>
   </section>
 
