--- a/pages/kangourou.html
+++ b/pages/kangourou.html
@@ -32,7 +32,7 @@
                 <a class="nav-link" href="service.html">Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href=".habitat-animaux.html">Les Animaux du Zoo</a>
+                <a class="nav-link" href="habitat-animaux.html">Les Animaux du Zoo</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
