--- a/pages/habitat-animaux.html
+++ b/pages/habitat-animaux.html
@@ -133,7 +133,7 @@
       <a href="loup.html">
         <img class="profile" src="../asset/forêt-loup.jpg" alt="Loup">
       </a>
-      <h4>Forêt hivernale</h4>
+      <h4>L'Europe Centrale</h4>
     </div>
   </section>
 
