--- a/pages/contact.html
+++ b/pages/contact.html
@@ -29,13 +29,9 @@
       </div>
   
       <div>
-        <label for="category" class="form-label">Titre</label>
-        <select class="form-select" name="category" id="category">
-          <option selected>Sélectionnez</option>
-          <option value="1">Réservation</option>
-          <option value="2">Informations</option>
-          <option value="3">Autre</option>
-        </select>
+        <label for="subject" class="form-label">Sujet</label>
+        <text class="form-select" name="subject" id="subject">
+        </text>
       <small></small>
       </div>
         
