Validation version finale Site web statique responsive

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -30,8 +30,7 @@
   
       <div>
         <label for="subject" class="form-label">Sujet</label>
-        <text class="form-select" name="subject" id="subject">
-        </text>
+        <input type="text" class="form-control" name="subject" id="subject" placeholder="Réservations, informations..">
       <small></small>
       </div>
         
