--- a/pages/singe.html
+++ b/pages/singe.html
@@ -47,21 +47,20 @@
         <img class="habitat-hero" src="../asset/singe3.jpg" alt="famille de singes">
         <h1>L'Amazonie</h1>
 
-        <p>Curabitur nunc magna, posuere eget, venenatis  eu, vehicula ac, velit.
-        Aenean ornare, massa a accumsan pulvinar,  quam lorem laoreet purus, eu  sodales magna
-         risus molestie lorem.Nunc erat velit, hendrerit quis,  malesuada ut, aliquam vitae, wisi.  Sed posuere. 
-         Curabitur nunc magna, posuere eget, venenatis  eu, vehicula ac, velit.
-         Aenean ornare, massa a accumsan pulvinar,  quam lorem laoreet purus, eu  sodales magna
-          risus molestie lorem.Nunc erat velit, hendrerit quis,  malesuada ut, aliquam vitae, wisi.  Sed posuere. 
-         </p>
+        <p>
+          Découvrez l’Amazonie et ses merveilles en explorant l’habitat de nos singes. 
+          Plongez dans cette forêt tropicale luxuriante et vivez une expérience immersive au 
+          cœur de la nature. Notre habitat amazonien est une véritable jungle intérieure, 
+          riche en végétation luxuriante et en arbres imposants, offrant un terrain de jeu parfait 
+          pour nos singes. Les lianes, les branches et les plateformes sont disposées pour imiter 
+          les arbres de la forêt amazonienne, permettant aux singes de grimper, de se balancer et de 
+          socialiser comme ils le feraient dans la nature. Observez leur agilité et leur intelligence 
+          dans cet environnement vibrant et dynamique, qui met en valeur la diversité et la complexité 
+          de la forêt tropicale. 
+        </p>
 
-        <ul>
-            <li> Singe 1</li>
-            <li> Singe 2</li>
-            <li> Singe 3</li>
-            <li> Singe 4</li>
-            <li> Singe 5</li>
-        </ul>
+        
+     
 
       </section>
       <section class="container-animal">
