--- a/pages/girafe.html
+++ b/pages/girafe.html
@@ -47,21 +47,17 @@
         <img class="habitat-hero" src="../asset/girafes.jpg" alt="famille de girafes">
         <h1>La savane</h1>
 
-        <p>Curabitur nunc magna, posuere eget, venenatis  eu, vehicula ac, velit.
-        Aenean ornare, massa a accumsan pulvinar,  quam lorem laoreet purus, eu  sodales magna
-         risus molestie lorem.Nunc erat velit, hendrerit quis,  malesuada ut, aliquam vitae, wisi.  Sed posuere. 
-         Curabitur nunc magna, posuere eget, venenatis  eu, vehicula ac, velit.
-         Aenean ornare, massa a accumsan pulvinar,  quam lorem laoreet purus, eu  sodales magna
-          risus molestie lorem.Nunc erat velit, hendrerit quis,  malesuada ut, aliquam vitae, wisi.  Sed posuere. 
+        <p>
+          Entrez dans l'univers fascinant de la savane africaine, et découvrez l’habitat des 
+          girafes, les plus grands mammifères terrestres.Notre habitat de la savane pour les girafes 
+          est un espace où ces élégants géants peuvent se déplacer librement et explorer leur environnement 
+          naturel. Des arbres hauts et feuillus leur fournissent de quoi se nourrir en hauteur, 
+          imitant les acacias de la savane africaine. Les girafes cohabitent avec d’autres animaux de 
+          la savane, offrant aux visiteurs un aperçu authentique de la vie dans ces plaines dorées. 
+          Observez-les s’étirer pour atteindre les feuilles les plus hautes et admirez leur grâce 
+          sans égale.
          </p>
 
-        <ul>
-            <li> Girafe 1</li>
-            <li> Girafe 2</li>
-            <li> Girafe 3</li>
-            <li> Girafe 4</li>
-            <li> Girafe 5</li>
-        </ul>
 
       </section>
       <section class="container-animal">
